# kosh

./: .gitignore  Cargo.toml  LICENSE  README.md  TESTING.md  VIRTUALBOX_SETUP.md  aarch64-kosh.json  create-vbox-vm.ps1  test-config.toml  test-simple-boot.md  x86_64-kosh.json
.cargo/: config.toml
.kiro/specs/enhanced-shell/: design.md  requirements.md  tasks.md
.kiro/specs/kosh/: design.md  requirements.md  tasks.md
drivers/graphics/: Cargo.toml
drivers/graphics/src/: lib.rs  tests.rs
drivers/keyboard/: Cargo.toml
drivers/keyboard/src/: integration_test.rs  lib.rs  main.rs  tests.rs
drivers/network/: Cargo.toml
drivers/network/src/: lib.rs
drivers/storage/: Cargo.toml
drivers/storage/src/: lib.rs
drivers/touch/: Cargo.toml
drivers/touch/src/: lib.rs
iso/: README.txt
iso/boot/: kosh-kernel
iso/boot/grub/: custom.cfg  grub.cfg  grubenv
iso/config/: system.conf
iso/system/: fs-service  init
kernel/: Cargo.toml  build.rs  linker.ld
kernel/src/: boot.rs  driver_tests.rs  lib.rs  main.rs  serial.rs  test_harness.rs  vga_buffer.rs
kernel/src/ipc/: capability.rs  capability_test.rs  message.rs  mod.rs  queue.rs  security.rs  tests.rs
kernel/src/memory/: heap.rs  mod.rs  physical.rs  swap.rs  swap_algorithm.rs  swap_config.rs  swap_file.rs  tests.rs  vmm.rs
kernel/src/platform/: mod.rs  tests.rs  traits.rs
kernel/src/platform/aarch64/: cache.rs  context.rs  interrupts.rs  io.rs  memory.rs  mod.rs  power.rs  registers.rs  timer.rs
kernel/src/platform/x86_64/: cache.rs  context.rs  interrupts.rs  io.rs  memory.rs  mod.rs  power.rs  registers.rs  timer.rs
kernel/src/power/: battery_monitor.rs  cpu_scaling.rs  idle_management.rs  mod.rs  power_policy.rs  responsiveness.rs
kernel/src/process/: context.rs  mod.rs  process.rs  scheduler.rs  tests.rs
kernel/src/syscall/: dispatcher.rs  error.rs  mod.rs  numbers.rs  test.rs  validation.rs
kernel/tests/: kernel_tests.rs
scripts/: build-iso.sh  build-minimal-iso.sh  build.sh  generate-test-report.sh  integration-tests.bat  integration-tests.sh  package-components.sh  run-all-tests.sh  run-kernel-tests.bat  run-kernel-tests.sh  test-boot.sh  test-drivers.sh  test-iso.sh  validate-multiboot2.sh  validate-tests.sh
shared/kosh-driver/: Cargo.toml
shared/kosh-driver/src/: capability.rs  communication.rs  error.rs  lib.rs
shared/kosh-ipc/: Cargo.toml
shared/kosh-ipc/src/: lib.rs
shared/kosh-service/: Cargo.toml
shared/kosh-service/src/: lib.rs
shared/kosh-types/: Cargo.toml
shared/kosh-types/src/: lib.rs
userspace/driver-manager/: Cargo.toml
userspace/driver-manager/src/: dependency_resolver.rs  driver_loader.rs  driver_registry.rs  isolation.rs  main.rs
userspace/fs-service/: Cargo.toml
userspace/fs-service/src/: ext4.rs  lib.rs  main.rs  vfs.rs
userspace/init/: Cargo.toml
userspace/init/src/: main.rs  process_spawner.rs  service_manager.rs  syscalls.rs
userspace/shell/: Cargo.toml  REFACTOR_SUMMARY.md
userspace/shell/src/: commands.rs  error.rs  infrastructure.rs  input.rs  lib.rs  main.rs  output.rs  tests.rs  types.rs
