[workspace]
members = [
    "kernel",
    "drivers/storage",
    "drivers/network", 
    "drivers/graphics",
    "drivers/keyboard",
    "userspace/init",
    "userspace/fs-service",
    "userspace/driver-manager",
    "userspace/shell",
    "shared/kosh-types",
    "shared/kosh-ipc",
    "shared/kosh-driver",
    "shared/kosh-service",
]

resolver = "2"

[workspace.dependencies]
# Shared dependencies across workspace
spin = "0.9"
bitflags = "2.4"
log = "0.4"
volatile = "0.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1