[package]
name = "kosh-graphics-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
kosh-types = { path = "../../shared/kosh-types" }
kosh-ipc = { path = "../../shared/kosh-ipc" }
kosh-driver = { path = "../../shared/kosh-driver" }
spin = { workspace = true }
log = { workspace = true }
volatile = { workspace = true }