[package]
name = "kosh-driver-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
kosh-types = { path = "../../shared/kosh-types" }
kosh-ipc = { path = "../../shared/kosh-ipc" }
kosh-driver = { path = "../../shared/kosh-driver" }
kosh-service = { path = "../../shared/kosh-service" }
linked_list_allocator = "0.10"

[features]
default = []