[package]
name = "kosh-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
kosh-types = { path = "../../shared/kosh-types" }
kosh-ipc = { path = "../../shared/kosh-ipc" }
kosh-service = { path = "../../shared/kosh-service" }
linked_list_allocator = { version = "0.10", default-features = false, features = ["use_spin"] }